# my_frame_python

./: .env  .gitignore  Dockerfile  PrimeTest.java  README.md  _opentelemetry.py  app.py  config.py  logger.py  logger_conf.py  main.go  main.py  metrics.py  middleware.py  prometheus.py  pyproject.toml  requirements.txt  router.py  teste.py  teste_cpu.py  tracing.py  x.http
app/: app.py  config.py  logger.py  metrics.py  router.py  routing.py  tracing.py  user_model.py
app/core/: _utils.py  application.py  exception.py  logger.py  metrics.py  params.py  routing.py  swagger.py  tracing.py  utils.py
app/dto/: base_dto.py  user_dto.py
app/infra/: database.py  lifespan.py  proxy_handler.py  redis.py  security.py
app/models/: model_base.py  objectid_type.py  user_model.py
benchmark/: bench.md  docker-compose.yml  teste.http
benchmark/fastapi_benck/: Dockerfile  Dockerfile_puro  main.py  main_eval.py  main_puro.py  main_starlett.py  main_threads.py  pyproject.toml  teste_io.py
demo/: Dockerfile  docker-compose.yml  pom.xml
docker/: alertmanager.yml  alerts.yml  docker-compose.yml  grafana-datasources.yml  nginx.conf  otelcol-config.yml  overrides.yaml  prometheus.yml  redis.conf  tempo.yaml
fastify/: Dockerfile  cache.js  cacheable.js  index.js  otel.js  package-lock.json  package.json  pm2_exporter.js
golang/: go.mod  main.go
metrics/: histogram_10471.db  histogram_10715.db  histogram_10717.db  histogram_10719.db  histogram_10721.db  histogram_11256.db  histogram_11530.db  histogram_9405.db
tests/: locustfile.py  massa.json  x.http
(+53 files in other folders)
