[project]
name = "fastapi-benck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "granian>=2.3.1",
    "gunicorn>=23.0.0",
    "httptools>=0.6.4",
    "msgspec>=0.19.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.54b1",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-instrumentation-pymongo>=0.54b1",
    "opentelemetry-instrumentation-redis>=0.54b1",
    "orjson>=3.10.18",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pymongo>=4.13.0",
    "ujson>=5.10.0",
    "unicorn>=2.1.3",
    "uvloop>=0.21.0",
]
